# forget-rag

./: .gitignore  CHANGELOG.md  CHANGELOG.zh-TW.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-TW.md  ROADMAP.md  ROADMAP.zh-TW.md  SECURITY.md  SPEC.md  SPEC.zh-TW.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: publish.yml  test.yml
docs/: architecture.md  architecture.zh-TW.md  benchmark.md  benchmark.zh-TW.md
docs/benchmark_data/: results.json  results.txt
docs/blog/: launch.md
examples/: 01_basic_usage.out.txt  01_basic_usage.py  02_langchain_retriever.out.txt  02_langchain_retriever.py  03_chroma_with_forget_rag.out.txt  03_chroma_with_forget_rag.py  04_cli_walkthrough.md
scripts/: run_benchmark.py
